# Optimization-in-engineering

./: LICENSE  README.md  pyproject.toml  requirements.txt
LP_problem/: scaffolding_solution.py
MOO_ColumnDesign_problem/: MOO_problem_solution.m  MultiObjNormalizedSolution.py  MultiObjSolution.py
NLP_BeamDesign_problem/: Beam_problem_solution.m  Beam_solution.py
NLP_TrussDesign_problem/: Truss_problem_solution.m  Truss_solution.py
examples/: run_beam.py  run_column_nsga2.py  run_column_weighted.py  run_scaffolding.py  run_truss.py
problem1_lp/: description.md
src/opteng/lp/: scaffolding.py
src/opteng/moo/: column_nsga2.py  column_weighted.py
src/opteng/nlp/: beam.py  truss.py
validation/matlab/: Beam_problem_solution.m  MOO_problem_solution.m  Truss_problem_solution.m
